# slack-sandbox

./: CLAUDE.md  LICENSE  README.md  oop.json  oop.yaml  uploads.json  uploads.yml
.claude/: CLAUDE.md  settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: MAINTAINERS_GUIDE.md  dependabot.yml
deno.sdk.begut/: .gitignore  CHANGELOG.md  LICENSE  README.md  deno.jsonc  flake.nix  import_map.json  manifest.ts
deno.sdk.chanl/: .gitignore  CHANGELOG.md  README.md  deno.jsonc  flake.nix  import_map.json  manifest.ts
java.sdk.gibra/: .env.example  .env.sample  .gitignore  CHANGELOG.md  README.md  build.gradle  flake.nix  manifest.json  shell.nix  slack.json
js.bolt.squid/: README.md  package.json
js.bolt.surge/: .env.example  .gitignore  .sops.yaml  CHANGELOG.md  README.md  biome.json  flake.nix  jsconfig.json  manifest.development.json  manifest.json  manifest.production.json  manifest.staging.json  nitro.config.js  package-lock.json  package.json  secrets.development.yaml  secrets.development.yaml.example  secrets.production.yaml  slack.json  (+2 more)
py.bolt.begut/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  flake.nix  manifest.json  pyproject.toml
py.bolt.begut/.slack/: apps.json  config.json  hooks.json
py.bolt.begut/src/: app.py  config.py
py.bolt.begut/src/handlers/: edit.py  forward.py  publish.py
py.bolt.begut/src/listeners/: __init__.py
py.bolt.begut/src/store/: git.py  repos.py
py.bolt.snaek/: .env.example  .gitignore  CHANGELOG.md  MAINTAINERS_GUIDE.md  Makefile  README.md  app.py  flake.nix  manifest.json  manifest.yaml  pyproject.toml  requirements.txt  slack.json
py.bolt.snaek/.slack/: .gitignore  apps.json  config.json  hooks.json
py.bolt.snaek/agent/: Modelfile  respond.py  tools.py
py.bolt.snaek/database/: manager.py
py.bolt.snaek/handlers/: messaging.py
py.bolt.snaek/listeners/: __init__.py
py.bolt.snaek/listeners/actions/: __init__.py  feedback.py
py.bolt.snaek/listeners/assistant/: __init__.py
py.bolt.snaek/listeners/events/: __init__.py  app_mention.py  message.py
py.bolt.snaek/models/: Modelfile  respond.py
py.bolt.snaek/shared/: types.py
py.bolt.snaek/snippets/: README.md  __init__.py
py.bolt.snaek/snippets/example_0000_post_message/: __init__.py  chat.py
py.bolt.snaek/snippets/issue_928_shrug_quiz/: __init__.py  proctor_quiz.py
py.bolt.snaek/snippets/issue_953_flask_socketio/: .env.example  .gitignore  README.md  app.py  requirements.txt
py.bolt.snaek/snippets/issue_953_flask_socketio/templates/: index.html
py.sdk.todos/: .env.development  .env.example  .env.production  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  flake.nix  manifest.development.json  manifest.production.json  pyproject.toml  secrets.development.yaml  secrets.test.yaml
py.sdk.todos/.claude/: CLAUDE.md  settings.local.json
py.sdk.todos/.slack/: apps.dev.json  apps.json  config.json  hooks.json
py.sdk.todos/src/api/: __init__.py  auth.py  lists.py  ollama.py
py.sdk.todos/src/cli/: __init__.py  __main__.py  display.py  main.py
py.sdk.todos/src/cli/commands/: __init__.py  add.py  done.py  edit.py  init.py  list.py  suggest.py
py.sdk.todos/src/config/: __init__.py  _base.py  list.py  token.py
py.sdk.todos/src/web/: __init__.py  local.py  server.py
py.sdk.todos/src/web/templates/: __init__.py  callback.html  landing.html
(+185 files in other folders)
