[project]
name = "py.bolt.snaek"
description = "a strange and slithery app with some superb powers"
version = "2024.03.05"
requires-python = ">=3.12"
dependencies = [
  "requests==2.31.0",
  "slack-bolt==1.18.1",
  "slack-cli-hooks==0.0.0.dev2",
  "slack-sdk==3.27.0",
]
readme = "README.md"
license = {text = "MIT License"}

[project.optional-dependencies]
tests = [
  "mypy==1.8.0",
  "types-requests==2.31.0.20240311",
]

[project.urls]
Repository = "https://github.com/zimeg/slack-sandbox.git"
Issues = "https://github.com/zimeg/slack-sandbox/issues"
Changelog = "https://github.com/zimeg/slack-sandbox/blob/main/py.bolt.snaek/CHANGELOG.md"
