[project]
name = "py.bolt.snaek"
description = "a strange and slithery app with some superb powers"
version = "2024.07.07"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "slack-bolt",
  "slack-sdk",
]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
tests = [
  "mypy",
  "types-requests",
]
tools = [
  "slack-cli-hooks",
]

[project.urls]
Repository = "https://github.com/zimeg/slack-sandbox.git"
Issues = "https://github.com/zimeg/slack-sandbox/issues"
Changelog = "https://github.com/zimeg/slack-sandbox/blob/main/py.bolt.snaek/CHANGELOG.md"
