[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todos"
version = "0.1.0"
description = "Todo's Guide — collaborative task management using Slack Lists"
requires-python = ">=3.11"
dependencies = [
    "requests>=2,<3",
    "slack-sdk>=3,<4",
]

[project.scripts]
todos = "cli.main:main"
server = "web.server:main"

[tool.setuptools.packages.find]
where = ["src"]
